Set max width for modal container and add temp fix for image overflow and nav button movement

--- a/src/projects/Projects.css
+++ b/src/projects/Projects.css
@@ -109,6 +109,8 @@
     display: flex;
     height: 75%;
     width: 80%;
+    max-width: 1550px;
+    overflow: hidden;
 }
 
 #modal-image-container {
@@ -143,7 +145,7 @@
 #navigation {
     display: flex;
     flex-direction: column;
-    align-self: end;
+    align-self: start;
     margin-left: auto;
     margin-bottom: 15px;
     margin-right: 20px;
